--- a/CSS/login.css
+++ b/CSS/login.css
@@ -8,7 +8,7 @@
     overflow: hidden;
 }
 
-.Login-container::before{
+.Login-container::before {
     content: '';
     position: absolute;
     top: 0;
@@ -16,4 +16,21 @@
     width: 100%;
     height: 5px;
     background: linear-gradient(90deg, var(--primary-color));
+}
+
+header {
+margin-bottom: 2rem;
+text-align: center;
+}
+
+h1 {
+    font-size: 1.8rem;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+    color: var(--text-secundary);
+}
+
+.subtitle {
+    color: var(--text-secundary);
+    font-size: 0.95rem;
 }
