--- a/CSS/login.css
+++ b/CSS/login.css
@@ -61,5 +61,16 @@ input {
     border-radius: var(--border-radius);
     color: var(--text-primary);
     font-size: 1rem;
-    transition: var(--transition);
+    transition: var(--transition); 
+}
+
+input:focus{
+    outline: none;
+    border-color: var(--primary-color);
+    box-shadow: 0 0 0 3px rgba(108, 99, 255, 0.2);
+}
+
+input::placeholder {
+    color: var(--text-secundary);
+    opacity: 0.7;
 }
