social btn link

--- a/CSS/login.css
+++ b/CSS/login.css
@@ -167,7 +167,8 @@ button:active {
     margin-bottom: 1.5rem;
 }
 
-.social-btn {
+.social-btn { 
+    text-decoration: none;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -183,4 +184,22 @@ button:active {
 .social-btn:hover {
     background-color: rgba(255, 255, 255, 0.05);
     transform: translateY(-5px);
+}
+
+.singup-link {
+    text-align: center;
+    margin-top: 1.5rem;
+    color: var(--text-secundary);
+    font-size: 0.9rem;
+}
+
+.singup-link a {
+    color: var(--primary-color);
+    text-decoration: none;
+    font-weight: 600;
+    transition: var(--transition);
+} 
+
+.singup-link a:hover {
+    text-decoration: underline;
 }
