--- a/CSS/login.css
+++ b/CSS/login.css
@@ -205,3 +205,9 @@ button:active {
 .singup-link a:hover {
     text-decoration: underline;
 }
+
+@media (max-width: 480px) {
+    .login-container {
+        padding: 2rem 1.5rem;
+    }
+}
